--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -23,6 +23,7 @@ body{
     margin: 0;
     padding: 0;
     
+    
     min-height: 100vh;
     background: ivory;
     color: #379683;
@@ -75,7 +76,7 @@ footer{
     box-sizing: border-box;
     background:rgb(57, 58, 58);
     height:35vh;
-    width: 100vw;
+    width: 98vw;
     color:white;
     opacity: .9;
 }
@@ -130,7 +131,7 @@ footer{
 
 .footer-bottom{
     background: #212222;
-    width: 100vw;
+    width: 98vw;
     padding: 0;
     padding-top: 0%;
     text-align: center;
@@ -191,3 +192,17 @@ footer{
     color: #212222;
     margin-left: 15px;
 }
+@media only screen and (max-width: 600px) {
+    .carousel {
+      width:auto ;
+    }
+    .col-3 a{
+        position: relative;
+        right: -80px;
+    }
+    .navbar-brand{
+        padding: 0px;
+    }
+
+
+  }
