--- a/public/css/Home.css
+++ b/public/css/Home.css
@@ -202,6 +202,9 @@ footer{
     }
     .navbar-brand{
         padding: 0px;
+        margin: 0px;
+        position:absolute;
+        left: 100px; 
     }
 
 
