--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -58,7 +58,7 @@
           <div class="carousel-item">
             <img src="images/man2.jfif" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h2>Welcom {{Name1}}To our Websit</h2>
+                <h2>Welcom {{Name1}} on our Websit</h2>
                 <p>This Website made for only project purpose.</p>
                 <button class="btn btn-danger">Technology</button>
                 <button class="btn btn-primary">Web Development</button>
@@ -68,7 +68,7 @@
           <div class="carousel-item">
             <img src="images/man3.jfif" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
-                <h2>Welcom {{name1}}To our Websit</h2>
+                <h2>Welcom {{Name1}} on our Websit</h2>
                 <p>This Website made for only project purpose.</p>
                 <button class="btn btn-danger">Technology</button>
                 <button class="btn btn-primary">Web Development</button>
