--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -90,11 +90,13 @@
             <div class="col-md-6">
               <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                  <strong class="d-inline-block mb-2 text-primary">World</strong>
-                  <h3 class="mb-0">Coding event</h3>
-                  <div class="mb-1 text-muted">Nov 12</div>
-                  <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="stretched-link">Continue reading</a>
+                  <strong class="d-inline-block mb-2 text-primary">Holl Of Fame</strong>
+                  <h3 class="mb-0">Your Info </h3>
+                 
+                  <p class="card-text mb-auto">Your Name : {{Name1}}.</p>
+                  <p class="card-text mb-auto">Your Email : {{Name3}}.</p>
+                  <p class="card-text mb-auto">Your Phone-no : {{Name4}}.</p>
+                  
                 </div>
                 <div class="col-auto d-none d-lg-block">
                   <img class="bd-placeholder-img" width="200" height="250" src="images/css.jpg" alt="">
@@ -104,11 +106,12 @@
             <div class="col-md-6">
               <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                  <strong class="d-inline-block mb-2 text-success">Design</strong>
-                  <h3 class="mb-0">Lern designing</h3>
-                  <div class="mb-1 text-muted">Nov 11</div>
-                  <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="stretched-link">Continue reading</a>
+                  <strong class="d-inline-block mb-2 text-success">Svpm</strong>
+                  <h3 class="mb-0">Teachers</h3>
+                  
+                  <p class="mb-auto">Mr. H. R. Kumbhar</p>
+                  <p class="mb-auto">thanks to guide Mr. H. R. Kumbhar</p>
+                  <a href="#" class="stretched-link"></a>
                 </div>
                 <div class="col-auto d-none d-lg-block">
                  <img class="bd-placeholder-img" width="200" height="250"src="images/block1.jfif" alt="">
@@ -123,11 +126,14 @@
             <div class="col-md-6">
               <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                  <strong class="d-inline-block mb-2 text-primary">World</strong>
-                  <h3 class="mb-0">Coding event</h3>
-                  <div class="mb-1 text-muted">Nov 12</div>
-                  <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="stretched-link">Continue reading</a>
+                  <strong class="d-inline-block mb-2 text-primary">Creator</strong>
+                  <h3 class="mb-0">About Us</h3>
+                  
+                  <p class="card-text mb-auto">Ashish : Backend.</p>
+                  <p class="card-text mb-auto">Aditya : Frontend.</p>
+                  <p class="card-text mb-auto">Vishal : Frontend.</p>
+                  <p class="card-text mb-auto">Kunal  : Frontend.</p>
+                  
                 </div>
                 <div class="col-auto d-none d-lg-block">
                   <img class="bd-placeholder-img" width="200" height="250" src="images/yo2.jfif" alt="">
@@ -137,11 +143,14 @@
             <div class="col-md-6">
               <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
                 <div class="col p-4 d-flex flex-column position-static">
-                  <strong class="d-inline-block mb-2 text-success">Design</strong>
-                  <h3 class="mb-0">Lern designing</h3>
-                  <div class="mb-1 text-muted">Nov 11</div>
-                  <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-                  <a href="#" class="stretched-link">Continue reading</a>
+                  <strong class="d-inline-block mb-2 text-success">About Holl Of Fame</strong>
+                  
+ 
+                  <p class="mb-auto">Yeah,you can be the greatest,you can be the best
+You can be the King Kong bangin'on your chest,
+You can beat the world,you can beat the war
+One day you Standing On Holl of Fame</p>
+                 
                 </div>
                 <div class="col-auto d-none d-lg-block">
                  <img class="bd-placeholder-img" width="200" height="250"src="images/yo3.jfif" alt="">
